@@ -2,6 +2,7 @@ OpenLDAP 2.4 Change Log
 
 OpenLDAP 2.4.21 Engineering
 	Fixed liblutil for negative time offsets (ITS#6405)
+	Fixed slapd freeing tasks from queue (ITS#6413)
 	Fixed slapd looping with SSL/TLS connections (ITS#6412)
 	Fixed slapd use correct ce_type (ITS#6408)
 	Fixed slapo-translucent with back-null (ITS#6403)
